logs/scheduler/2023-10-13/dag_w_catchup_and_backfill.py.log
[2023-10-13T02:10:10.262+0000] {processor.py:157} INFO - Started process (PID=1453) to work on /opt/airflow/dags/dag_w_catchup_and_backfill.py
[2023-10-13T02:10:10.263+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/dag_w_catchup_and_backfill.py for tasks to queue
[2023-10-13T02:10:10.267+0000] {logging_mixin.py:151} INFO - [2023-10-13T02:10:10.265+0000] {dagbag.py:539} INFO - Filling up the DagBag from /opt/airflow/dags/dag_w_catchup_and_backfill.py
[2023-10-13T02:10:10.273+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/dag_w_catchup_and_backfill.py
[2023-10-13T02:10:10.303+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/dag_w_catchup_and_backfill.py took 0.047 seconds
[2023-10-13T02:10:40.897+0000] {processor.py:157} INFO - Started process (PID=1480) to work on /opt/airflow/dags/dag_w_catchup_and_backfill.py
[2023-10-13T02:10:40.899+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/dag_w_catchup_and_backfill.py for tasks to queue
[2023-10-13T02:10:40.900+0000] {logging_mixin.py:151} INFO - [2023-10-13T02:10:40.900+0000] {dagbag.py:539} INFO - Filling up the DagBag from /opt/airflow/dags/dag_w_catchup_and_backfill.py
[2023-10-13T02:10:40.905+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/dag_w_catchup_and_backfill.py
[2023-10-13T02:10:40.934+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/dag_w_catchup_and_backfill.py took 0.043 seconds
[2023-10-13T02:10:59.341+0000] {processor.py:157} INFO - Started process (PID=1507) to work on /opt/airflow/dags/dag_w_catchup_and_backfill.py
[2023-10-13T02:10:59.343+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/dag_w_catchup_and_backfill.py for tasks to queue
[2023-10-13T02:10:59.345+0000] {logging_mixin.py:151} INFO - [2023-10-13T02:10:59.344+0000] {dagbag.py:539} INFO - Filling up the DagBag from /opt/airflow/dags/dag_w_catchup_and_backfill.py
[2023-10-13T02:10:59.355+0000] {logging_mixin.py:151} INFO - [2023-10-13T02:10:59.351+0000] {dagbag.py:347} ERROR - Failed to import: /opt/airflow/dags/dag_w_catchup_and_backfill.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/dagbag.py", line 343, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 839, in exec_module
  File "<frozen importlib._bootstrap_external>", line 976, in get_code
  File "<frozen importlib._bootstrap_external>", line 906, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/dag_w_catchup_and_backfill.py", line 17
    ) as dag:
            ^
SyntaxError: unexpected EOF while parsing
[2023-10-13T02:10:59.356+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/dag_w_catchup_and_backfill.py
[2023-10-13T02:10:59.398+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/dag_w_catchup_and_backfill.py took 0.073 seconds
